--- a/WebShop/Areas/Customer/Views/Products/Index.cshtml
+++ b/WebShop/Areas/Customer/Views/Products/Index.cshtml
@@ -22,7 +22,7 @@
                 {
                     <div class="col-md-4 mb-4">
                         <div class="card h-100">
-                            <img class="card-img-top" src="img/@(product.Name).jpg" alt="@product.Name" style="height: 200px;">
+                            <img class="card-img-top" src="~/img/@(product.Name).jpg" alt="@product.Name" style="height: 200px;">
                             <div class="card-body">
                                 <h5 class="card-title">@product.Name</h5>
                                 <p class="card-text">@product.Description</p>
