--- a/WebShop/Views/Shared/_Layout.cshtml
+++ b/WebShop/Views/Shared/_Layout.cshtml
@@ -32,26 +32,24 @@
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                        <li class="nav-item">
-                                <form class="row">
-                                    <div class="col-4 m-0 p-0">
-                                        <input type="text" class="form-control" id="search" aria-describedby="emailHelp">
-                                    </div>
-                                    <div class="col-4 m-0 p-0">
-                                        <select class="form-select" aria-label="Categories">
-                                            <option selected value="0">All Categories</option>
-                                            @foreach (var category in layoutModel.ProductCategories)
-                                            {
-                                                <option value="@category.Id">@category.Name</option>
-                                            }
-                                        </select>
-                                    </div>
-                                    <div class="col-4">
-                                    <button type="submit" class="btn btn-primary" asp-controller="Products" asp-action="Search">Search</button>
-                                    </div>
-                                </form>
-                        </li>
                     </ul>
+                    <form class="d-flex">
+                        <div class="col-4 m-0 p-0">
+                            <input type="text" class="form-control" id="search" aria-describedby="emailHelp">
+                        </div>
+                        <div class="col-4 m-0 p-0">
+                            <select class="form-select" aria-label="Categories">
+                                <option selected value="0">All Categories</option>
+                                @foreach (var category in layoutModel.ProductCategories)
+                                {
+                                    <option value="@category.Id">@category.Name</option>
+                                }
+                            </select>
+                        </div>
+                        <div class="col-4">
+                            <button type="submit" class="btn btn-primary" style="margin-left: .5rem" asp-controller="Products" asp-action="Search">Search</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </nav>
