--- a/WebShop/Views/Shared/_Layout.cshtml
+++ b/WebShop/Views/Shared/_Layout.cshtml
@@ -52,6 +52,7 @@
                             <button type="submit" class="btn btn-primary" style="margin-left: .5rem" asp-controller="Products" asp-action="Search">Search</button>
                         </div>
                     </form>
+                    <partial name="_LoginPartial"/>
                 </div>
             </div>
         </nav>
