--- a/WebShop/Views/Shared/_Layout.cshtml
+++ b/WebShop/Views/Shared/_Layout.cshtml
@@ -1,9 +1,7 @@
-﻿@using WebShop.Models.Views
-@{
-
-    var layoutModel = ViewBag.LayoutVM as LayoutVM; // Cast ViewBag to your model type
-
+﻿@{
+    var categories = Context.Items["CategoryList"] as List<ProductCategory>;
 }
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -40,13 +38,16 @@
                             <input type="text" class="form-control" id="search" aria-describedby="emailHelp">
                         </div>
                         <div class="col-4 m-0 p-0">
-                            <select class="form-select" aria-label="Categories">
-                                <option selected value="0">All Categories</option>
-                                @foreach (var category in layoutModel.ProductCategories)
-                                {
-                                    <option value="@category.Id">@category.Name</option>
-                                }
-                            </select>
+                            @if(categories != null)
+                            {
+                                <select class="form-select" aria-label="Categories">
+                                    <option selected value="0">All Categories</option>
+                                    @foreach (var category in categories)
+                                    {
+                                        <option value="@category.Id">@category.Name</option>
+                                    }
+                                </select>
+                            }
                         </div>
                         <div class="col-4">
                             <button type="submit" class="btn btn-primary" style="margin-left: .5rem" asp-controller="Products" asp-action="Search">Search</button>
