Dokończenie procesu rejestracji Wyświetlaniu panelu administratora jak jesteś zalogowany jako Administrator

--- a/WebShop/Areas/Identity/Pages/Account/Register.cshtml
+++ b/WebShop/Areas/Identity/Pages/Account/Register.cshtml
@@ -28,32 +28,37 @@
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.Name" class="form-control" autocomplete="name" aria-required="true" placeholder="name" />
+                <input asp-for="Input.Name" class="form-control" placeholder="name" />
                 <label asp-for="Input.Name">Name</label>
                 <span asp-validation-for="Input.Name" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.Surname" class="form-control" autocomplete="surname" aria-required="true" placeholder="surname" />
+                <input asp-for="Input.Surname" class="form-control" placeholder="surname" />
                 <label asp-for="Input.Surname">Surname</label>
                 <span asp-validation-for="Input.Surname" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.StreetAddress" class="form-control" autocomplete="street-address" aria-required="true" placeholder="Street Addres" />
+                <input asp-for="Input.PhoneNumber" class="form-control" placeholder="Phone N=umber" />
+                <label asp-for="Input.PhoneNumber">Phone Number</label>
+                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+            </div>
+            <div class="form-floating mb-3">
+                <input asp-for="Input.StreetAddress" class="form-control"  placeholder="Street Addres" />
                 <label asp-for="Input.StreetAddress">Street Address</label>
                 <span asp-validation-for="Input.StreetAddress" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.City" class="form-control" autocomplete="city" aria-required="true" placeholder="city" />
+                <input asp-for="Input.City" class="form-control"  placeholder="city" />
                 <label asp-for="Input.City">City</label>
                 <span asp-validation-for="Input.City" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.PostalCode" class="form-control" autocomplete="postal-code" aria-required="true" placeholder="Postal Code" />
+                <input asp-for="Input.PostalCode" class="form-control" placeholder="Postal Code" />
                 <label asp-for="Input.PostalCode">Postal Code</label>
                 <span asp-validation-for="Input.PostalCode" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.State" class="form-control" autocomplete="state" aria-required="true" placeholder="state" />
+                <input asp-for="Input.State" class="form-control" placeholder="state" />
                 <label asp-for="Input.State">State</label>
                 <span asp-validation-for="Input.State" class="text-danger"></span>
             </div>
