--- a/WebShop/Views/Shared/_Layout.cshtml
+++ b/WebShop/Views/Shared/_Layout.cshtml
@@ -32,6 +32,25 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                              <span class="hover-bar"></span> <!-- Bar for hover effect -->
                         </li>
+                        @if (User.IsInRole(Roles.Role_Admin))
+                        {
+                            <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+                                <ul class="navbar-nav">
+                                    <li class="nav-item dropdown">
+                                        <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                            Admin Panel
+                                        </button>
+                                        <ul class="dropdown-menu dropdown-menu-dark">
+                                            <li><a class="dropdown-item" href="#">Products</a></li>
+                                            <li><a class="dropdown-item" href="#">Products Categories</a></li>
+                                            <li><a class="dropdown-item" href="#">Users</a></li>
+                                            <li><a class="dropdown-item" href="#">Orders</a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </div>
+                        }
+
                     </ul>
                     <form class="d-flex">
                         <div class="col-4 m-0 p-0">
