--- a/WebShop/Areas/Customer/Views/Home/Index.cshtml
+++ b/WebShop/Areas/Customer/Views/Home/Index.cshtml
@@ -25,9 +25,12 @@
                 <div class="carousel-inner" style="border-radius: 8px;">
                     @foreach (var product in Model.Products)
                     {
+                        
                         <div class="carousel-item @(product.Id == 1 ? "active" : "")">
-                            <img src="img/@(product.Name).jpg" class="d-block  carousel-image" alt="@product.Name" />
 
+                            <a asp-controller="Products" asp-action="Details" asp-route-id="@product.Id">
+                                <img src="img/@(product.Name).jpg" class="d-block carousel-image" alt="@product.Name" />
+                            </a>
                             <!-- Carousel Caption -->
                             <div class="carousel-caption d-block" style="background: rgba(0, 0, 0, 0.3); padding: 5px 8px; border-radius: 4px;">
                                 <h3 class="text-light" style="margin-bottom: 2px;">@product.Name</h3>
