--- a/WebShop/Areas/Customer/Views/Products/Details.cshtml
+++ b/WebShop/Areas/Customer/Views/Products/Details.cshtml
@@ -6,7 +6,7 @@
 
 
 <div class="container d-flex justify-content-center align-items-center" style="min-height: 80vh;">
-    <div class="card shadow-lg text-center animated-border" style="width: 100%; max-width: 600px; border-radius: 10px;">
+    <div class="card shadow-lg text-center " style="width: 100%; max-width: 600px; border-radius: 10px;">
         <h2 class="card-title mt-3">@Model.Name</h2>
         
        
