Lista Category Działa Wstępna implementacja usuwania kategori (BEZ RESTAPI)

--- a/WebShop/Views/Shared/_Layout.cshtml
+++ b/WebShop/Views/Shared/_Layout.cshtml
@@ -94,6 +94,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="//cdn.datatables.net/2.1.8/js/dataTables.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/productCategory.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
