--- a/WebShop/Areas/Admin/Views/Category/Index.cshtml
+++ b/WebShop/Areas/Admin/Views/Category/Index.cshtml
@@ -22,7 +22,7 @@
                         <td>
                             <div>
                                 <a asp-controller="Category" asp-action="Edit" asp-route-id="@category.Id" class="btn btn-outline-info">Edit</a>
-                                <a asp-controller="Category" asp-action="Delete" asp-route-id="@category.Id" class="btn btn-outline-danger">Delete</a>
+                                <a onclick=Delete('/admin/category/delete?id=@category.Id') class="btn btn-outline-danger">Delete</a>
                             </div>
                         </td>
                     </tr>
@@ -32,3 +32,27 @@
         </table>
     </div>
 </div>
+
+<script>
+function Delete(url) {
+    Swal.fire({
+        title: 'Are you sure?',
+        text: "You won't be able to revert this!",
+        icon: 'warning',
+        showCancelButton: true,
+        confirmButtonColor: '#3085d6',
+        cancelButtonColor: '#d33',
+        confirmButtonText: 'Yes, delete it!'
+    }).then((result) => {
+        if (result.isConfirmed) {
+            $.ajax({
+                url: url,
+                type: 'DELETE',
+                success: function (data) {
+                    console.log("OK");
+                }
+            })
+        }
+    })
+}
+</script>
