--- a/WebShop/Areas/Admin/Views/Category/Index.cshtml
+++ b/WebShop/Areas/Admin/Views/Category/Index.cshtml
@@ -5,54 +5,19 @@
         <div class="col-12"><h1>Product Category List</h1></div>
     </div>
     <div class="row">
-        <table class="table table-dark">
+        <table id="categoryTable" class="table table-dark">
             <thead class="tab-content">
                 <tr>
                     <th class="col-2">Id</th>
                     <th class="col-8">Name</th>
                     <th class="col-2"></th>
                 </tr>
-            </thead>
-            <tbody>
-                @foreach(var category in Model)
-                {
-                    <tr>
-                        <td>@category.Id</td>
-                        <td>@category.Name</td>
-                        <td>
-                            <div>
-                                <a asp-controller="Category" asp-action="Edit" asp-route-id="@category.Id" class="btn btn-outline-info">Edit</a>
-                                <a onclick=Delete('/admin/category/delete?id=@category.Id') class="btn btn-outline-danger">Delete</a>
-                            </div>
-                        </td>
-                    </tr>
-                }
-                
-            </tbody>
+            </thead>      
         </table>
     </div>
 </div>
 
-<script>
-function Delete(url) {
-    Swal.fire({
-        title: 'Are you sure?',
-        text: "You won't be able to revert this!",
-        icon: 'warning',
-        showCancelButton: true,
-        confirmButtonColor: '#3085d6',
-        cancelButtonColor: '#d33',
-        confirmButtonText: 'Yes, delete it!'
-    }).then((result) => {
-        if (result.isConfirmed) {
-            $.ajax({
-                url: url,
-                type: 'DELETE',
-                success: function (data) {
-                    console.log("OK");
-                }
-            })
-        }
-    })
+@section Scripts
+{
+    <script src="~/js/category.js"></script>
 }
-</script>
