Product Category Update

--- a/WebShop/Areas/Admin/Views/Category/Index.cshtml
+++ b/WebShop/Areas/Admin/Views/Category/Index.cshtml
@@ -1,6 +1,4 @@
-﻿@model List<ProductCategory>
-
-<div class="container">
+﻿<div class="container">
     <div class="row">
         <div class="col-12"><h1>Product Category List</h1></div>
     </div>
