--- a/WebShop/Areas/Admin/Views/Category/Edit.cshtml
+++ b/WebShop/Areas/Admin/Views/Category/Edit.cshtml
@@ -1,12 +1,18 @@
 ﻿@model ProductCategory
-
-
 <div class="container">
     <div class="row">
         <h1>Category To Update</h1>
     </div>
     <div class="row">
-        @Model.Id<br/>
-        @Model.Name<br/>
+        <form method="post" enctype="multipart/form-data">
+            <input asp-for="Id" hidden/>
+            <div class="mb-3 row p-1">
+                <label asp-for="Name" class="p-0">Category Name</label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <button class="btn btn-success" type="submit">Edit</button>
+            <a class="btn btn-outline-dark" asp-area="Admin" asp-controller="Category" asp-action="Index">Back To Product Category List Page</a>
+        </form>
     </div>
 </div>
