--- a/WebShop/Views/Shared/_Layout.cshtml
+++ b/WebShop/Views/Shared/_Layout.cshtml
@@ -56,9 +56,9 @@
                         }
 
                     </ul>
-                    <form class="d-flex">
+                    <form method="post" class="d-flex">
                         <div class="col-4 m-0 p-0">
-                            <input type="text" class="form-control" id="search" aria-describedby="emailHelp">
+                            <input type="text" class="form-control" aria-describedby="emailHelp">
                         </div>
                         <div class="col-4 m-0 p-0">
                             @if(categories != null)
