added controls for admin to use over users. Delete user and change status.

--- a/WebShop/Views/Shared/_Layout.cshtml
+++ b/WebShop/Views/Shared/_Layout.cshtml
@@ -47,7 +47,8 @@
                                         <ul class="dropdown-menu dropdown-menu-dark">
                                             <li><a class="dropdown-item">Products</a></li>
                                             <li><a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Products Categories</a></li>
-                                            <li><a class="dropdown-item" href="#">Users</a></li>
+                                            <li><a class="dropdown-item" asp-area="Admin" asp-controller="User" asp-action="Index">Users</a></li>
+
                                             <li><a class="dropdown-item" href="#">Orders</a></li>
                                         </ul>
                                     </li>
