--- a/WebShop/Views/Shared/_Layout.cshtml
+++ b/WebShop/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                         </li>
                         @if (User.IsInRole(Roles.Role_Admin))
                         {
-                            <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+                            <div class="collapse navbar-collapse" id="navbarNavDarkDropdownAdmin">
                                 <ul class="navbar-nav">
                                     <li class="nav-item dropdown">
                                         <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
@@ -49,6 +49,21 @@
                                             <li><a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Products Categories</a></li>
                                             <li><a class="dropdown-item" href="#">Users</a></li>
                                             <li><a class="dropdown-item" href="#">Orders</a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </div>
+                        }
+                        @if (User.IsInRole(Roles.Role_User))
+                        {
+                            <div class="collapse navbar-collapse" id="navbarNavDarkDropdownUser">
+                                <ul class="navbar-nav">
+                                    <li class="nav-item dropdown">
+                                        <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                            User Panel
+                                        </button>
+                                        <ul class="dropdown-menu dropdown-menu-dark">
+                                            <li><a class="dropdown-item">My Orders</a></li>
                                         </ul>
                                     </li>
                                 </ul>
