--- a/WebShop/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/WebShop/Areas/Admin/Views/Product/Upsert.cshtml
@@ -26,15 +26,15 @@
                     <input asp-for="Product.Currency" class="form-control" />
                     <span asp-asp-validation-for="Product.Currency" class="text-danger"></span>
                 </div>
-                <div class="mb-3 row p-1" id="editor">
+                <div class="mb-3 row p-1" >
                     <label asp-for="Product.Description" class="p-0">Product Description</label>
-                    <input asp-for="Product.Description" class="form-control" />
+                    <input asp-for="Product.Description" class="form-control"/>
                     <span asp-asp-validation-for="Product.Description" class="text-danger"></span>
                 </div>
                 <div class="mb-3 row p-1">
                     <label asp-for="Product.ImgPath" class="p-0">Product Image</label>
-                    <input type="file" name="file" class="form-control" />
-                    <span asp-asp-validation-for="Product.Image" class="text-danger"></span>
+                    <input asp-for="Product.ImgPath" type="file" name="file" class="form-control" />
+                    <span asp-asp-validation-for="Product.ImgPath" class="text-danger"></span>
                 </div>
                 <div class="mb-3 row p-1">
                     <label asp-for="Product.ProductCategoryId" class="p-0">Product Category</label>
@@ -49,6 +49,11 @@
                         <option disabled selected>--Select Supplier--</option>
                     </select>
                     <span asp-asp-validation-for="SupplierId" class="text-danger"></span>
+                </div>
+                <div class="mb-3 row p-1">
+                    <label asp-for="Product.Quantity" class="p-0">Quantity</label>
+                    <input type="number" asp-for="Product.Quantity" class="form-control"/>
+                    <span asp-asp-validation-for="Quantity" class="text-danger"></span>
                 </div>
                 <div class="row">
                     <div class="col-6 col-md-3">
