Add product fixed

--- a/WebShop/Areas/Customer/Views/Products/Index.cshtml
+++ b/WebShop/Areas/Customer/Views/Products/Index.cshtml
@@ -23,12 +23,12 @@
                     <div class="col-md-4 mb-4">
                         <div class="card h-100">
                             <a asp-controller="Products" asp-action="Details" asp-route-id="@product.Id">
-                            <img class="card-img-top" src="~/img/@(product.Name).jpg" alt="@product.Name" style="height: 200px;">
+                            <img class="card-img-top" src="~/img/@(product.ImgPath)" alt="@product.Name" style="height: 200px;">
                             </a>
                             <div class="card-body">
                                 <h5 class="card-title">@product.Name</h5>
                                 <p class="card-text">@product.Description</p>
-                                <p class="card-text"><strong>Price: @product.Price.ToString("C2")</strong></p>
+                                <p class="card-text"><strong>Price: @product.Price USD</strong></p>
                                 <p class="card-text">
                                     <a href="@Url.Action("Index", new { supplierId = product.SupplierId, categoryId = product.ProductCategoryId})">
                                         Supplier: @product.Supplier.Name
