Deleting from main page only for ADMIN - In progress

--- a/WebShop/Views/Shared/_Layout.cshtml
+++ b/WebShop/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
                                             Admin Panel
                                         </button>
                                         <ul class="dropdown-menu dropdown-menu-dark">
-                                            <li><a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Upsert">Add Product</a></li>
+                                            <li><a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Products</a></li>
                                             <li><a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Products Categories</a></li>
                                             <li><a class="dropdown-item" asp-area="Admin" asp-controller="User" asp-action="Index">Users</a></li>
                                             <li><a class="dropdown-item" href="#">Orders</a></li>
