--- a/WebShop/Areas/Customer/Views/Products/Index.cshtml
+++ b/WebShop/Areas/Customer/Views/Products/Index.cshtml
@@ -41,7 +41,22 @@
                                         View Details
                                     </a>
                                 </p>
-@*                                 <a class="btn btn-primary" onclick="addToCart()" asp-controller="Home" asp-action="AddToCart" asp-route-productId="@product.Id">Add to Cart</a>
+                                @if (User.IsInRole(Roles.Role_Admin))
+                                {
+                                    <p class="card-text">
+                                        <a asp-area="Admin" asp-controller="Product" asp-action="Upsert" asp-route-id="@product.Id"
+                                           class="btn btn-outline-primary btn-sm  d-block" style="border-radius: 20px;">
+                                            Edit Product
+                                        </a>
+                                    </p>
+                                    <p class="card-text">
+                                        <a asp-controller="Products" asp-action="DeleteFromMainPage" asp-route-id="@product.Id"
+                                           class="btn btn-outline-primary btn-sm  d-block" style="border-radius: 20px;">
+                                            Delete Product
+                                        </a>
+                                    </p>
+                                }
+                                @*                                 <a class="btn btn-primary" onclick="addToCart()" asp-controller="Home" asp-action="AddToCart" asp-route-productId="@product.Id">Add to Cart</a>
  *@
                             </div>
                         </div>
