--- a/WebShop/Areas/Customer/Views/Home/Index.cshtml
+++ b/WebShop/Areas/Customer/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="container">
     <div class="row justify-content-center">
-        <div class="col-md-8">
+        <div class="col-md-8" style="min-height: 55vh">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
 
                 <!-- Carousel Indicators -->
